--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon index.js",
-    "start": "NODE_ENV=production node index.js"
+    "start": "nodemon index.js",
+    "start:prod": "NODE_ENV=production node index.js",
+    "start:dev": "NODE_ENV=development node index.js"
   },
   "keywords": [],
   "author": "",
